--- a/css/_premeeting-screens.scss
+++ b/css/_premeeting-screens.scss
@@ -30,16 +30,18 @@
 
     .action-btn {
         border-radius: 3px;
+        box-sizing: border-box;
         color: #fff;
         cursor: pointer;
         display: inline-block;
         font-size: 15px;
         line-height: 24px;
-        margin-top: 16px;
         padding: 7px 16px;
         position: relative;
         text-align: center;
-        width: 286px;
+        width: 320px;
+
+        @include adjust-for-max-width(320px, 8px);
 
         &.primary {
             background: #0376DA;
@@ -175,6 +177,8 @@
             text-align: center;
             width: 320px;
 
+            @include adjust-for-max-width(320px, 8px);
+
             &.error {
                 box-shadow: 0px 0px 4px 3px rgba(225, 45, 45, 0.4);
             }
@@ -246,6 +250,7 @@
     transition: background 0.16s ease-out;
     width: 320px;
 
+    @include adjust-for-max-width(320px, 8px);
     @include flex-centered();
 
     svg {
